cod-tools (unreleased)

  * Added:
    - COD::CIF::DDL module.
    - COD::CIF::DDL::DDL1 module.
    - COD::CIF::Tags::Manage:
      - accepting CIF format version number in new_datablock().
    - data/replacement_values/replacement_values.lst
      - several more value replacement rules.
    - cif_tags_in_list:
      - the --exclude-category-names option;
    - cif_validate:
      - a validation message pertaining to quote usage in combination with
        numeric values;
      - a uniqueness constraint check for simple and composite loop references.
  * Changed:
    - COD::AuthorNames:
      - updated several error messages to only display the original author name
        without any modifications;
    - COD::CIF::Data::AtomList:
      - rewritten dump_atoms_as_cif() using standard CIF printing routines.
    - COD::CIF::Parser::Yapp:
      - replaced the COD::ShowStruct module with Data::Dumper
        for debug prints.
    - dropped test-dependency on 'mysql' command line utility.
    - cif_validate:
      - slightly reworded several validation messages.
    - cif_cod_check:
      - slightly reworded several warning messages.
  * Deprecated:
    - cif_printout:
      - the --output-struct option.
    - cif_parse:
      - the output format.
    - COD::ShowStruct.
  * Fixed:
    - COD::CIF::Data::Check:
      - added a missing space symbol in an error message.
      - ceasing to require diffractogram and phase block links in the
        overall powder diffraction block if they are the same.
    - COD::CIF::Data::AtomList:
      - using '_space_group_name_H-M_alt' data item instead of deprecated
        '_symmetry_space_group_name_H-M' in dump_atoms_as_cif().
    - COD::CIF::Parser::Bison:
      - distributing parent datablock's 'cifversion' to its save blocks
        recursively.
    - COD::CIF::Tags::Print:
      - resolving an issue with printing of CIF2 tables inside CIF2 lists
        in cif_print();
      - printing CIF save frames in cif_print().