@@ -4,7 +4,8 @@ cod-tools (unreleased)
     - COD::CIF::DDL module.
     - COD::CIF::DDL::DDL1 module.
     - COD::CIF::Tags::Manage:
-      - accepting CIF format version number in new_datablock().
+      - accepting CIF format version number in new_datablock();
+      - the 'contains_data_item()' subroutine.
     - data/replacement_values/replacement_values.lst
       - several more value replacement rules.
     - cif_tags_in_list:
